# lab-measurement-platform

./: .gitignore  README.md  start.py
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: dependencies.py  store.py
backend/app/api/routes/: analysis.py  measurements.py  reports.py
backend/app/core/: config.py  exceptions.py
backend/app/models/: analysis.py  report.py  waveform.py
backend/app/services/: analysis_engine.py  report_generator.py
backend/app/services/ingestion/: base_instrument.py  csv_parser.py  mock_oscilloscope.py
backend/tests/: test_analysis_engine.py  test_api.py  test_ingestion.py  test_report_generator.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/AnalysisSidebar/: AnalysisSidebar.tsx
frontend/src/components/Dashboard/: Dashboard.tsx
frontend/src/components/Plot/: FftPlot.tsx  WaveformPlot.tsx
frontend/src/components/ReportModal/: ReportModal.tsx
frontend/src/components/SourceSelector/: SourceSelector.tsx
frontend/src/hooks/: useAnalysis.ts  useWaveform.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
